# Deputy

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.devcontainer/: .gitignore  devcontainer.json  docker-compose.yml
.devcontainer/configs/: keycloak-realm.json
.devcontainer/deputy-development/: Dockerfile  deputy  deputy-configuration.toml  ocr.gpg
deputy/: Cargo.toml
deputy-front/pages/: index.tsx
deputy-library/: Cargo.toml
deputy-library/src/: archiver.rs  cli.rs  client.rs  configuration.rs  constants.rs  lib.rs  lockfile.rs  package.rs  packager.rs  project.rs  repository.rs  rest.rs  test.rs  toml_structure.rs  validation.rs
deputy-library/src/project/: enums.rs  mod.rs
deputy-library/src/snapshots/: deputy_library__package__tests__file_is_converted_to_bytes.snap  deputy_library__package__tests__latest_index_metadata_is_found.snap  deputy_library__package__tests__latest_package_metadata_is_found.snap  deputy_library__package__tests__metadata_is_converted_to_bytes.snap  deputy_library__package__tests__metadata_is_parsed_from_bytes.snap  deputy_library__package__tests__package_file_can_be_saved.snap  deputy_library__package__tests__package_is_converted_to_bytes.snap  deputy_library__package__tests__package_is_converted_to_stream.snap  deputy_library__package__tests__package_is_parsed_from_bytes.snap  deputy_library__repository__tests__index_info_is_found.snap  deputy_library__repository__tests__index_metadata_is_found.snap  deputy_library__repository__tests__index_repository_is_updated_with_package-2.snap  deputy_library__repository__tests__index_repository_is_updated_with_package.snap  deputy_library__repository__tests__metadata_is_written_to_file.snap  deputy_library__repository__tests__package_metadata_is_found.snap  deputy_library__validation__tests__condition_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__event_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__exercise_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__feature_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__inject_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__other_type_package_is_parsed_and_passes_validation.snap
deputy-package-server/: Cargo.toml  docker-compose.yml  example-config.yml
deputy-package-server-routes/: Cargo.toml
deputy-package-server-routes/tests/: basic.rs
deputy-package-server/assets/: default-production-config.yml
deputy-package-server/assets/maintainer-scripts/: postrm  preinst
deputy-package-server/assets/unit-scripts/: deputy-package-server.service
deputy-package-server/deployment/: config.yml  docker-compose.yml  nginx.conf
deputy-package-server/migrations/2022-10-31-123708_create_packages/: up.sql
deputy-package-server/migrations/2022-11-02-134308_create_packages/: up.sql
deputy-package-server/migrations/2023-03-13-073756_remove_html_from_packages/: down.sql  up.sql
deputy-package-server/migrations/2023-03-13-084121_add_readme_path/: down.sql  up.sql
deputy-package-server/migrations/2023-04-18-154649_create_versions/: down.sql  up.sql
deputy-package-server/migrations/2023-04-24-070142_add_description/: down.sql  up.sql
deputy-package-server/migrations/2023-05-11-104721_make_names_unique/: down.sql  up.sql
deputy-package-server/migrations/2023-08-07-133903_add_type_and_category/: down.sql  up.sql
deputy-package-server/migrations/2023-08-14-095513_create_tokens/: up.sql
deputy-package-server/src/: configuration.rs  constants.rs  errors.rs  helpers.rs  lib.rs  main.rs  models.rs  schema.rs  test.rs  utils.rs
deputy-package-server/src/middleware/: authentication.rs
deputy-package-server/src/middleware/authentication/: jwt.rs  local_token.rs  mod.rs
deputy-package-server/src/models/: apitoken.rs  mod.rs  owner.rs  package.rs  token.rs
deputy-package-server/src/models/helpers/: mod.rs  pagination.rs  uuid.rs  versioning.rs
deputy-package-server/src/routes/: apitoken.rs  mod.rs  owner.rs  package.rs
deputy-package-server/src/services/database/: apitoken.rs  mod.rs  owner.rs  package.rs  token.rs
deputy-package-server/src/snapshots/: deputy_package_server__configuration__tests__can_parse_the_configuration.snap
deputy-package-server/src/test/: database.rs  mod.rs
deputy-package-server/src/utilities/: mod.rs
deputy-package-server/tests/: basic.rs  common.rs  owner.rs  package.rs
deputy-package-server/tests/common/: mod.rs
deputy/assets/: deputy
deputy/git-server-docker/: Dockerfile  nginx.conf
deputy/src/: client.rs  commands.rs  configuration.rs  constants.rs  executor.rs  helpers.rs  lib.rs  main.rs  progressbar.rs
deputy/src/snapshots/: deputy__helpers__tests__creates_temporary_file_path.snap
deputy/tests/: basic.rs  checksum.rs  download.rs  list.rs  owner.rs  package.rs  publish.rs
deputy/tests/common/: mod.rs
deputy/tests/helpers/: mod.rs
deputy/tests/repository/: mod.rs
deputy/tests/test_backend/: mod.rs
docker/deputy-frontend/: Dockerfile
migrations/2022-10-31-123708_create_packages/: down.sql
random_package/: package.toml  readme.md
web-client/: .env  .eslintrc.yml  i18n.js  next.config.js  package.json  tailwind.config.js
web-client/components/: CategoryList.tsx  CodePreview.tsx  ContentIFrame.tsx  FilePreview.tsx  MainNavbar.tsx  Package.tsx  PackageCategories.tsx  PackageDetail.tsx  PackageList.tsx  PackageListView.tsx  PackageVersions.tsx  PageLimitSelect.tsx  Pagination.tsx  SearchBar.tsx  SearchResults.tsx  SponsorIcons.tsx  Versiontag.tsx
web-client/interfaces/: Package.tsx  PackageListInterface.tsx  Project.tsx  Token.tsx
web-client/locales/en/: common.json
web-client/pages/: _app.tsx  dashboard.tsx  index.tsx  packages.tsx  tokens.tsx
web-client/pages/api/: restricted.tsx
web-client/styles/: Dashboard.module.css  Home.module.css  Index.module.css  MainNavbar.module.css  PackageList.module.css  Packages.module.css  global.css
web-client/utils/: api.ts  index.ts  sort.ts
(+3 files in other folders)
