[package]
name = "deputy-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = { version = "3", features = ["http2", "ws"] }
actix-web = "4"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
env_logger = "0.9"
fancy-regex = "0.10"
futures = "0.3"
git2 = "0.14"
ignore = "0.4"
insta = "1"
lazy_static = "1"
log = "0.4"
reqwest = "0.11"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
tokio-util = "0.7"
toml = "0.5"
zip = { version = "0.6", features = ["bzip2"] }
zip-extensions = "0.6"

[features]
default = ["test"]
test = []
