[package]
name = "deputy-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = { version = "3", features = ["http2", "ws"] }
actix-web = "4"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
byte-unit = { version = "4", optional = true }
env_logger = "0.9"
fancy-regex = "0.10"
futures = "0.3"
git2 = "0.14"
ignore = "0.4"
lazy_static = "1"
lockfile = "0.3"
log = "0.4"
num_cpus = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
parse_duration = "2.1"
port_check = "0.1.5"
rand = { version = "0.8", optional = true }
rayon = { version = "1", optional = true }
tar = "0.4"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
tokio-util = "0.7"
toml = "0.5"
gzp = { version = "0.9", default-features = false, features = ["deflate_rust"] }

[dev-dependencies]
insta = { version = "1", features = ["toml"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }

[features]
default = []
test = ["byte-unit", "rand", "rayon"]
