[package]
name = "deputy-package-server"
description = "Deputy package server is a digital library server meant for storing deputy packages"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
name = "deputy-package-server"
maintainer = "Kaarel Allemann <kaarel.allemann@c14.ee>"
copyright = "2022, CR14 <info@cr14.ee>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Deputy package server is a digital library server meant for storing deputy packages."""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
assets = [
  [
    "target/release/deputy-package-server",
    "/var/opt/deputy/bin/",
    "755",
  ],
  [
    "assets/default-production-config.yml",
    "/etc/opt/deputy/deputy-package-server/config.yml",
    "644",
  ],
]
maintainer-scripts = "assets/maintainer-scripts"
systemd-units = { unit-name = "deputy-package-server", unit-scripts = "assets/unit-scripts", enable = true }


[dependencies]
actix-web = "4"
actix-files = "0.6"
anyhow = "1"
deputy-library = { path = "../deputy-library", default-features = false }
env_logger = "0.9"
git2 = "0.14"
insta = "1"
lazy_static = "1"
log = "0.4"
rand = "0.8"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3"

[features]
default = ["test"]
test = ["deputy-library/test"]
