[package]
name = "deputy-package-server"
description = "Deputy package server is a digital library server meant for storing deputy packages"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
name = "deputy-package-server"
maintainer = "Kaarel Allemann <developers@cr14.ee"
copyright = "2022, CR14 <info@cr14.ee>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Deputy package server is a digital library server meant for storing deputy packages."""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
assets = [
  [
    "target/release/deputy-package-server",
    "/var/opt/deputy/bin/",
    "755",
  ],
  [
    "assets/default-production-config.yml",
    "/etc/opt/deputy/deputy-package-server/config.yml",
    "644",
  ],
]
maintainer-scripts = "assets/maintainer-scripts"
systemd-units = { unit-name = "deputy-package-server", unit-scripts = "assets/unit-scripts", enable = true }


[dependencies]
actix = "0.13"
actix-web = "4"
actix-files = "0.6"
actix-http = { version = "3", features = ["http2", "ws"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "2"
divrem = "1.0.0"
deputy-library = { path = "../deputy-library", default-features = false }
env_logger = "0.9"
flate2 = "1.0"
futures = "0.3"
git2 = "0.14"
insta = "1"
lazy_static = "1"
log = "0.4"
rand = "0.8"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tar = "0.4"
tempfile = "3"
thiserror = "1"
toml = "0.5"
tokio = { version = "1", features = ["sync", "macros", "time"] }
uuid = { version = "1.1", features = ["v4", "serde"] }

[features]
default = ["test"]
test = ["deputy-library/test", "tokio/sync", "tokio/macros", "tokio/time"]
