[package]
name = "deputy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-test = "0.0"
actix-web = "4"
actix-rt = "2"
anyhow = "1"
awc = "3"
byte-unit = "4"
clap = { version = "3", features = ["derive"] }
deputy-library = { path = "../deputy-library" }
deputy-package-server = { path = "../deputy-package-server" }
git2 = "0.14"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
log = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
rand = "0.8"
tempfile = "3"
