[package]
name = "deputy"
description = "Deputy CLI tool to interact with deputy packages"
version = "0.2.0"
edition = "2021"

[package.metadata.deb]
name = "deputy"
maintainer = "Kaarel Allemann <kaarel.allemann@c14.ee>"
copyright = "2022, CR14 <info@cr14.ee>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Deputy CLI tool to interact with deputy packages."""
section = "utility"
priority = "optional"
assets = [
  [
    "target/release/deputy",
    "/var/opt/deputy/bin/",
    "755",
  ],
  [
    "assets/deputy",
    "/usr/bin/",
    "755",
  ],
]

[dependencies]
actix = "0.13"
actix-web = "4"
actix-rt = "2"
anyhow = "1"
awc = "3"
bytes = "1"
byte-unit = "4"
clap = { version = "3", features = ["derive"] }
colored = "2"
deputy-library = { path = "../deputy-library" }
deputy-package-server = { path = "../deputy-package-server" }
git2 = "0.14"
futures = "0.3"
indicatif = "0.16"
lazy_static = "1"
log = "0.4"
path-absolutize = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["fs"], default-features = false }
toml = "0.5"
url = "2"

[dev-dependencies]
actix-test = "0.0"
assert_cmd = "2.0"
bollard = "0.12"
deputy-library = { path = "../deputy-library", features = ["test"] }
futures = "0.3"
insta = "1"
predicates = "2.1"
rand = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["fs", "time"], default-features = false }
